add matching result statistics section in dashboard for admin and manager

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1261,6 +1261,7 @@ en:
     current_owner: "Current Owner"
     last_updated: "Lasted Updated"
     case_stats: "Cases"
+    tr_stats: "Tracing Requests"
     cases_by_social_worker: "Cases by social worker"
     referrals_by_social_worker: "Referrals by social worker"
     case_stat_by_assessment_level: "Cases by Assessment Level"
@@ -1270,6 +1271,12 @@ en:
     geographic_area: "Geographic Area"
     all_cases: "All Cases"
     open: "Open"
+    range4: "0-4"
+    range4_8: "4-8"
+    range8_12: "8-12"
+    range12+: "12+"
+    match_result: "Matching Results"
+    score_range: "Score Range"
     count_risk_level_total:
       one: "You have %{stat} <span>%{stat_type} risk</span> case "
       other: "You have %{stat} <span>%{stat_type} risk</span> cases "
