--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -794,7 +794,7 @@ en:
   replications: "Replications"
   provide_translation: "Provide translation for"
   hide_on_view_page: "Hide On View Page"
-  show_on_minify_form: "Show On Minify Form"
+  show_on_short_form: "Show On Short Form"
   last_login: "Last Login"
 
 
