--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1326,6 +1326,7 @@ en:
         date_of_birth: "Please enter a valid date of birth for this case record"
         wishes_preferences_count: "You are only allowed %{preferences_count} child's preferences."
         value_range: "%{field_name} must be between %{min} and %{max}"
+        document_type: "The type %{type} is invalid."
         document_size: "Please upload a document smaller than 10mb"
         documents_count: "You are only allowed %{documents_count} documents per case."
         document_format: "Executable files are not allowed."
