--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
      flag_records: "Flag"
      flag_model: "Flag %{model}"
      unflag_model: "Unflag %{model}"
+     unflag_model_history: "Flag History %{model}"
      ok: 'OK'
      cancel: "Cancel"
      edit_subform: 'Edit Subform'
@@ -136,6 +137,7 @@ en:
      mark_for_mobile: "Mark for mobile"
      unmark_for_mobile: "Un-mark for mobile"
      approve_case_plan: "Approve Case Plan"
+     view_flags_history: "View History"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
@@ -218,6 +220,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflag_date: "Date Unflagged"
+    unflag_by: "Unflagged By"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
@@ -303,6 +307,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflag_date: "Date Unflagged"
+    unflag_by: "Unflagged By"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
@@ -407,6 +413,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflag_date: "Date Unflagged"
+    unflag_by: "Unflagged By"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     flagged_as_suspected: "Flagged by"
@@ -478,6 +486,8 @@ en:
     selected_records_error_message: "Please select one or more records to flag."
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflag_date: "Date Unflagged"
+    unflag_by: "Unflagged By"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     flag_error_message: "Please explain why you are flagging this record."
