JOR-45: Request Approval.
- Fixed menu item text.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,7 +136,7 @@ en:
      mark_for_mobile: "Mark for mobile"
      unmark_for_mobile: "Un-mark for mobile"
      approve_case_plan: "Approve Case Plan"
-     approval: "Approval"
+     approval: "Request Approval"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
