--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,6 +151,7 @@ en:
       mobile: "Mobile:"
       mobile_label: "Marked for mobile?"
       social_worker: "Field/Case/Social Worker:"
+      pending_approvals: "Pending Approvals"
       agency: "Agency:"
       status: "Status:"
       age_range: "Age Range:"
@@ -1610,11 +1611,12 @@ en:
 
   approvals:
     approve_bia: "Request Approval for the BIA form?"
-    approve_care_plan: "Request Approval for the Care Plan form?"
+    approve_case_plan: "Request Approval for the Care Plan form?"
     approve_closure: "Request Approval for the Closure form?"
     bia: "BIA"
     care_plan: "Care Plan"
     closure: "Closure"
+    pending_status: "Pending"
 
   per_page_translation: "Per page _MENU_"
   total: Total
