--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -824,6 +824,7 @@ en:
       case: "Case"
       incident: "Incident"
       tracing_request: "Tracing Request"
+      potential_match: "Potential Match"
       role: "Roles"
       user: "Users, Groups"
       metadata: "Forms, Lookups"
