added reporting_location_config to system_settings seed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1436,6 +1436,9 @@ en:
         admin_level_present: "must not be blank"
         unique_name: "A Location with that name already exists, please enter a different name"
 
+      reporting_location:
+        label_key: "Label Key must be one of Location Base Type values"
+
 
 
   select_all_results: "Select all results"
