JOR-108: QA3: fix approval role configuration.
- Added translation for `request_approval`.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -837,6 +837,7 @@ en:
       transfer: "Transfer"
       referral: "Referral"
       sync_mobile: "Sync with mobile device"
+      request_approval: "Request for approval"
       approve_case_plan: "Approve case plan"
       copy: "Copy"
       manage: "Manage"
