--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,8 +225,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
-    unflag_date: "Date Unflagged"
-    unflag_by: "Unflagged By"
+    unflag_date: "Date"
+    unflag_by: "Unflagged"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
@@ -312,8 +312,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
-    unflag_date: "Date Unflagged"
-    unflag_by: "Unflagged By"
+    unflag_date: "Date"
+    unflag_by: "Unflagged"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     id_of_record_this_duplicate_of: "Enter the ID of the record this is a duplicate of:"
@@ -418,8 +418,8 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
-    unflag_date: "Date Unflagged"
-    unflag_by: "Unflagged By"
+    unflag_date: "Date"
+    unflag_by: "Unflagged"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     flagged_as_suspected: "Flagged by"
@@ -491,8 +491,8 @@ en:
     selected_records_error_message: "Please select one or more records to flag."
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
-    unflag_date: "Date Unflagged"
-    unflag_by: "Unflagged By"
+    unflag_date: "Date"
+    unflag_by: "Unflagged"
     unflag_label: "Unflag"
     unflag_error_message: "Please explain why you are unflagging this record."
     flag_error_message: "Please explain why you are flagging this record."
