JOR-71 show flag history: Unflagged label missed.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,6 +225,7 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflagged_label: "Reason"
     unflag_date: "Date"
     unflag_by: "Unflagged"
     unflag_label: "Unflag"
@@ -312,6 +313,7 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflagged_label: "Reason"
     unflag_date: "Date"
     unflag_by: "Unflagged"
     unflag_label: "Unflag"
@@ -418,6 +420,7 @@ en:
     flag_reason_date: "Date (optional)"
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflagged_label: "Reason"
     unflag_date: "Date"
     unflag_by: "Unflagged"
     unflag_label: "Unflag"
@@ -491,6 +494,7 @@ en:
     selected_records_error_message: "Please select one or more records to flag."
     unflag_record: "Unflag Record"
     unflag_reason: "Unflag Reason"
+    unflagged_label: "Reason"
     unflag_date: "Date"
     unflag_by: "Unflagged"
     unflag_label: "Unflag"
