added governorate to Location BASE_TYPES

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1053,6 +1053,7 @@ en:
       region: 'region'
       province: 'province'
       district: 'district'
+      governorate: 'governorate'
       chiefdom: 'chiefdom'
       county: 'county'
       state: 'state'
