Added missing translations for Approvals.
- Added translation for "Approve BIA Form" and "Approve Closure Form"
  permissions.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -842,7 +842,9 @@ en:
       referral: "Referral"
       sync_mobile: "Sync with mobile device"
       request_approval: "Request for approval"
+      approve_bia: "Approve BIA form"
       approve_case_plan: "Approve case plan"
+      approve_closure: "Approve Closure form"
       copy: "Copy"
       manage: "Manage"
       administrator_read: "Administrator Read"
