Referral and Transition Status.
Includes fixes for JOR-109 and JOR-110.

- Added the `to_user_local_status` field to the Nested Transitions
  Subform.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1628,6 +1628,10 @@ en:
     success: "%{record_type} %{id} successfully referred"
     failure_batch: "%{failed_count} Referral(s) failed (check that consent fields are selected)"
     success_batch: "%{success_count} Referral(s) successfully made"
+    to_user_local_status_label: "Status"
+    user_local_status_pending: "Pending"
+    user_local_status_accepted: "Accepted"
+    user_local_status_rejected: "Rejected"
 
   transfer:
     type_label: "Type of Transfer"
@@ -1644,6 +1648,10 @@ en:
     success: "%{record_type} %{id} successfully transferred"
     failure_batch: "%{failed_count} Transfer(s) failed (check that consent fields are selected)"
     success_batch: "%{success_count} Transfer(s) successfully made"
+    to_user_local_status_label: "Status"
+    user_local_status_pending: "Pending"
+    user_local_status_accepted: "Accepted"
+    user_local_status_rejected: "Rejected"
 
   mark_for_mobile:
     no_records_selected: "No records selected"
