JOR-140: Relinquish Referral.
- Added `Done` button modal.
- Created controller to relinquish referrals.
- Added Done status to Transition.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -143,6 +143,7 @@ en:
      view_flags_history: "View History"
      request_approval: "Request Approval"
      approvals: "Approvals"
+     done: "Done"
 
   placeholders:
     subforms: "Click the edit button to add %{form} details"
@@ -1641,6 +1642,9 @@ en:
     user_local_status_pending: "Pending"
     user_local_status_accepted: "Accepted"
     user_local_status_rejected: "Rejected"
+    user_local_status_done: "Done"
+    complete_referral_label: "Clicking OK signifies that you have completed the referral work associated with this case. Once you click OK you will no longer have access to this record."
+    done_success_message: "Referral Done."
 
   reassign:
     reassign_case_title: "Reassign case(s) to:"
