DRYed up the rendering of the Approvals filters

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,9 +159,6 @@ en:
       social_worker: "Field/Case/Social Worker:"
       my_cases: "My Cases"
       referred_cases: "Cases referred to me"
-      pending_approvals: "Pending Approvals"
-      approved: "Approved"
-      rejected: "Rejected"
       agency: "Agency:"
       status: "Status:"
       age_range: "Age Range:"
@@ -180,6 +177,11 @@ en:
       record_state: "Record State:"
       photo: "Photo:"
       photo_label: "Has Photo?"
+      approvals:
+        pending: "Pending Approvals"
+        approved: "Approved"
+        rejected: "Rejected"
+
     order_by:
       most_recently: "Most recently"
       label: "Order by"
