JOR-142 Accept/Reject Transfers.
In progress: When user do local transfer the target user is added to the "Other Assigned Users" in order to
wait for the 'Accept' or 'Reject' action, transfer is set to 'In progress' until that happend.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1668,6 +1668,7 @@ en:
     user_local_status_pending: "Pending"
     user_local_status_accepted: "Accepted"
     user_local_status_rejected: "Rejected"
+    user_local_status_inprogress: "In Progress"
 
   mark_for_mobile:
     no_records_selected: "No records selected"
