--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1327,12 +1327,9 @@ en:
     manager_count_closed_total:
       one: "and %{stat} <span>closed</span> case "
       other: "and %{stat} <span>closed</span> cases "
-    manager_count_pending_total:
-      one: "You have %{stat} <span>pending</span> Transfer "
-      other: "You have %{stat} <span>pending</span> Transfers "
-    manager_count_rejected_total:
-      one: "and %{stat} <span>rejected</span> Transfer "
-      other: "and %{stat} <span>rejected</span> Transfers "
+    manager_transfers_totals:
+      one: "You have %{stat} <span>%{stat_type}</span> Transfer "
+      other: "You have %{stat} <span>%{stat_type}</span> Transfers "
     count_pending_approval_total:
       one: "You have %{stat} pending <span>%{stat_type}</span> Approval "
       other: "You have %{stat} pending <span>%{stat_type}</span> Approvals "
