--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1332,8 +1332,26 @@ en:
       one: "You have %{stat} <span>%{stat_type}</span> Transfer "
       other: "You have %{stat} <span>%{stat_type}</span> Transfers "
     count_pending_approval_total:
-      one: "You have %{stat} pending <span>%{stat_type}</span> Approval "
-      other: "You have %{stat} pending <span>%{stat_type}</span> Approvals "
+      one: "You have %{stat} <span>pending %{stat_type}</span> Approval "
+      other: "You have %{stat} <span>pending %{stat_type}</span> Approvals "
+    count_rejected_approval_total:
+      one: "and %{stat} <span>rejected %{stat_type}</span> Approval "
+      other: "and %{stat} <span>rejected %{stat_type}</span> Approvals "
+    count_new_bia_approvals:
+      one: "You have %{stat} <span>new %{stat_type}</span> Approval, "
+      other: "You have %{stat} <span>new %{stat_type}</span> Approvals, "
+    count_new_case_plan_approvals:
+      one: "%{stat} <span>new %{stat_type}</span> Approval, "
+      other: "%{stat} <span>new %{stat_type}</span> Approvals, "
+    count_new_closure_approvals:
+      one: "and %{stat} <span>new %{stat_type}</span> Approval, "
+      other: "and %{stat} <span>new %{stat_type}</span> Approvals, "
+    count_pending_transfers:
+      one: "You have %{stat} <span>pending</span> Transfer "
+      other: "You have %{stat} <span>pending</span> Transfers "
+    count_rejected_transfers:
+      one: "and %{stat} <span>rejected</span> Transfer "
+      other: "and %{stat} <span>rejected</span> Transfers "
     open_cases: "Open Cases"
     new_last_week: "New <span>(last week)</span>"
     new_this_week: "New <span>(this week)</span>"
