--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1352,6 +1352,7 @@ en:
     count_rejected_transfers:
       one: "and %{stat} <span>rejected</span> Transfer "
       other: "and %{stat} <span>rejected</span> Transfers "
+    count_waiting_for_acceptance_transfers: "You have %{stat} Transfers <span>waiting</span> for your acceptance"
     open_cases: "Open Cases"
     new_last_week: "New <span>(last week)</span>"
     new_this_week: "New <span>(this week)</span>"
