--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1679,7 +1679,7 @@ en:
     done_success_message: "Referral Done."
 
   reassign:
-    reassign_case_title: "Reassign case(s) to:"
+    reassign_case_title: "Assign case(s) to:"
     existing_user_label: "Existing user"
     user_mandatory: "User name is required"
     no_records_selected: "No records selected"
