--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1759,3 +1759,48 @@ en:
 
   sort_by:
     label: "Sort by"
+
+  logger:
+    to: "to"
+    to_user: "to user"
+    by_user: "by user"
+
+    copy: "Copying"
+    destroy: "Destroying"
+    show: "Viewing"
+    edit: "Editing"
+    update: "Updating"
+    export: "Exporting data for"
+    referral: "Referring"
+    reassign: "Assigning"
+    transfer: "Transfering"
+    reopen_case: "Reopening"
+
+    relinquish_referral: "Relinquish referral Done"
+
+    flag: Flagging
+    unflag: Unflagging
+
+    transfer_status:
+      Accepted: "Accepted Transfer"
+      Rejected: "Rejected Transfer"
+
+    request_approval:
+      bia: "Request Approval for the BIA form"
+      case_plan: "Request Approval for the Care Plan form"
+      closure: "Request Approval for the Closure form"
+
+    approve_form:
+      "false": "Rejecting"
+      "true": "Approving"
+      bia: "BIA form"
+      case_plan: "Care Plan form"
+      closure: "Closure form"
+
+    mark_for_mobile:
+      "false": "Un-Mark for mobile"
+      "true": "Mark for mobile"
+
+    record_state:
+      "false": "Disabling"
+      "true": "Enabling"
