JOR-129 Auditable Rails Logging for individual records.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1780,6 +1780,7 @@ en:
 
     flag: Flagging
     unflag: Unflagging
+    flag_records: Flagging
 
     transfer_status:
       Accepted: "Accepted Transfer"
