--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1765,6 +1765,7 @@ en:
     to_user: "to user"
     by_user: "by user"
 
+    create: "Creating"
     copy: "Copying"
     destroy: "Deleting"
     show: "Viewing"
