Added icon tooltips

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,7 @@ en:
      go: "Go"
      search: "Search"
      locations: "LOCATIONS"
+     bulk_exports: "BULK EXPORTS"
 
   buttons:
      delete: "Delete"
