split request_approval into 3 for bia, case plan, and closure

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -856,8 +856,11 @@ en:
       referral: "Referral"
       sync_mobile: "Sync with mobile device"
       request_approval: "Request for approval"
+      request_approval_bia: "Request BIA approval"
+      request_approval_case_plan: "Request Case Plan approval"
+      request_approval_closure: "Request Closure approval"
       approve_bia: "Approve BIA form"
-      approve_case_plan: "Approve case plan"
+      approve_case_plan: "Approve Case Plan"
       approve_closure: "Approve Closure form"
       copy: "Copy"
       manage: "Manage"
